--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-	background-image: url(src/assets/bg.png);
+	background-image: url('/bg.png');
 	background-position: top;
 	background-repeat: no-repeat;
 	background-size: cover;
