--- a/src/components/Works/Works.module.scss
+++ b/src/components/Works/Works.module.scss
@@ -10,7 +10,13 @@
 		margin-bottom: 56px;
 	}
 
+	@media (max-width: 740px) {
+		flex-direction: column;
+		align-items: center;
+	}
+
 	@media (max-width: 375px) {
 		margin-top: 26px;
+		
 	}
 }
