--- a/src/components/NextArrow/NextArrow.module.scss
+++ b/src/components/NextArrow/NextArrow.module.scss
@@ -1,6 +1,6 @@
 .nextArrow {
 	transform: rotate(180deg);
-	right: -15px;
+	right: 0;
 	position: absolute;
 	top: calc(50% - 20px);
 	cursor: pointer;
