--- a/src/components/RespondentsInfo/RespondentsInfo.module.scss
+++ b/src/components/RespondentsInfo/RespondentsInfo.module.scss
@@ -9,7 +9,7 @@
 	flex-wrap: wrap;
 	gap: 32px;
 
-	@media (max-width: 768px) {
+	@media (max-width: 1000px) {
 		padding-top: 20px;
 		padding-bottom: 32px;
 		gap: 20px;
@@ -17,9 +17,9 @@
 }
 
 .respondentsItem {
-	width: 592px;
+	width: calc(50% - 32px);
 
-	@media (max-width: 768px) {
+	@media (max-width: 1000px) {
 		width: 100%;
 	}
 }
@@ -30,7 +30,7 @@
 	font-weight: 600;
 	margin-bottom: 17px;
 
-	@media (max-width: 768px) {
+	@media (max-width: 1000px) {
 		margin-bottom: 46px;
 	}
 
