--- a/src/components/Stat/Stat.module.scss
+++ b/src/components/Stat/Stat.module.scss
@@ -6,16 +6,11 @@
 	margin-bottom: 80px;
 
 	&Info {
-		flex-grow: 1;
+		width: 50%;
 
-		@media (max-width: 768px) {
-			max-width: 351px;
-			max-height: 265px;
-		}
-
-		@media (max-width: 375px) {
+		@media (max-width: 640px) {
+			width: 100%;
 			text-align: center;
-			max-height: 307px;
 		}
 	}
 
@@ -24,7 +19,7 @@
 		margin-bottom: 56px;
 	}
 
-	@media (max-width: 375px) {
+	@media (max-width: 640px) {
 		flex-direction: column-reverse;
 	}
 }
@@ -52,8 +47,12 @@
 }
 
 .images {
-	flex-grow: 1;
+	width: 50%;
 	position: relative;
+
+	img {
+		width: 100%;
+	}
 
 	img:last-child {
 		position: absolute;
@@ -62,22 +61,7 @@
 		z-index: -1;
 	}
 
-	@media (max-width: 768px) {
-		img {
-			max-width: 351px;
-			max-height: 265px;
-		}
-	}
-
-	@media (max-width: 375px) {
-		img {
-			max-width: 342px;
-		}
-	}
-
-	@media (max-width: 320px) {
-		img {
-			max-width: 288px;
-		}
+	@media (max-width: 640px) {
+		width: 100%;
 	}
 }
