--- a/src/components/WorkItem/WorkItem.module.scss
+++ b/src/components/WorkItem/WorkItem.module.scss
@@ -34,6 +34,12 @@
 		line-height: 24px;
 	}
 
+	@media (max-width: 1180px) {
+		width: 50%;
+		margin-bottom: 25px;
+
+	}
+
 	@media (max-width: 768px) {
 		width: 342px;
 		height: 76px;
@@ -42,11 +48,15 @@
 		margin-bottom: 24px;
 	}
 
-	@media (max-width: 375px) {
+	@media (max-width: 420px) {
+		height: 100px;
 		margin-bottom: 32px;
+		width: 100%;
 	}
 
-	@media (max-width: 320px) {
-		height: 100px;
-	}
+	//@media (max-width: 375px) {
+	//	margin-bottom: 32px;
+	//	width: 100%;
+	//}
+
 }
